#16 CHORE: SwaggerConfig의 openAPI 리턴을 불변 리스트로 변경